--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "@stitches/react": "^1.2.8",
     "next": "14.0.3",
     "react": "^18",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
+    "prisma": "^5.6.0",
     "typescript": "^5"
   }
 }
