--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,21 +1,54 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "next/core-web-vitals"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "@typescript-eslint",
+    "jsx-a11y"
+  ],
   "rules": {
-    "quotes": [
-      "error",
-      "double"
+    "jsx-a11y/alt-text": [
+      "warn",
+      {
+        "elements": [
+          "img"
+        ],
+        "img": [
+          "Image"
+        ]
+      }
     ],
-    "semi": [
+    "jsx-a11y/aria-props": "warn",
+    "jsx-a11y/aria-proptypes": "warn",
+    "jsx-a11y/aria-unsupported-elements": "warn",
+    "jsx-a11y/role-has-required-aria-props": "warn",
+    "jsx-a11y/role-supports-aria-props": "warn",
+    "prettier/prettier": [
       "error",
-      "always"
+      {
+        "arrowParens": "always",
+        "endOfLine": "auto",
+        "printWidth": 80,
+        "semi": true,
+        "tabWidth": 2,
+        "trailingComma": "all"
+      }
     ],
-    "comma-dangle": [
-      "error",
-      "always-multiline"
-    ],
-    "object-curly-spacing": [
-      "error",
-      "always"
-    ]
+    "react/no-unknown-property": "error"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
