--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "book-wise",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -29,6 +32,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
