--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.6.0",
     "@stitches/react": "^1.2.8",
     "next": "14.0.3",
