feat(layout): Add Per-Page Layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,15 @@
     "jsx-a11y"
   ],
   "rules": {
+    "@typescript-eslint/ban-types": [
+      "error",
+      {
+        "extendDefaults": true,
+        "types": {
+          "{}": false
+        }
+      }
+    ],
     "jsx-a11y/alt-text": [
       "warn",
       {
