--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@phosphor-icons/react": "^2.0.15",
     "@prisma/client": "^5.6.0",
     "@stitches/react": "^1.2.8",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
